- Fix: Icon for rename list configuration bad placed in Firefox. - Fix: Spacing between filtering and data in list too narrow. - Fix: Spacing between navigation tool and buttons too narrow.

--- a/OpenXavaTest/web/naviox/style/naviox.css
+++ b/OpenXavaTest/web/naviox/style/naviox.css
@@ -835,6 +835,7 @@ input[type="button"], .ipad input[type="button"]:hover, A#show_modules,
 
 
 .ox-list-subheader {
+	padding-bottom: 5px; 
 	border-bottom: 1px solid #EBEBEB;	 
 }
 
@@ -1055,6 +1056,10 @@ input[type="button"], .ipad input[type="button"]:hover, A#show_modules,
 
 .ui-dialog .ox-view { 	
 	margin-right: 2px; 
+}
+
+.ox-list-info {  
+	margin-bottom: 5px;
 }
 
 .ox-list-info-detail { 
@@ -1517,7 +1522,7 @@ a.cke_button_disabled:hover, a.cke_button_disabled:focus, a.cke_button_disabled:
 	margin-left: 5px;
 	margin-right: -5px;
 	padding: 1px 0px 1px 5px;
-	vertical-align:top;
+	vertical-align: -1px;  
 }
 
 #list-title {
